--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "azureFunctions.projectSubpath": "app",
     "azureFunctions.scmDoBuildDuringDeployment": true,
     "azureFunctions.pythonVenv": ".venv",
-    "python.pythonPath": "app\\.venv\\Scripts\\python.exe",
+    "python.pythonPath": "app/.venv/bin/python",
     "python.envFile": "${workspaceFolder}/.vscode/env",
     "terminal.integrated.env.windows": {
         "PYTHONPATH": "./app"
