create venv on startup

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,5 +30,6 @@
     "remoteEnv": {
         "APP_ROOT": "app",
         "AppSecret": "${localEnv:AppSecret}"
-    }
+    },
+    "postCreateCommand": "pwsh -c './pysetup.ps1 -Venv'",
 }
