--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -19,8 +19,9 @@ RUN $ErrorActionPreference='Stop'; \
     New-Item /root/.config/powershell/ -Type Directory -Force; \
     Stop-Transcript;
 
-# Copy pwsh profile
+# Copy shell profiles
 COPY library-scripts/profile.ps1 /opt/microsoft/powershell/7/
+COPY library-scripts/.zshrc /root/
 
 # Default commands to pwsh
-ENTRYPOINT ["pwsh","-c"]
+ENTRYPOINT ["zsh","-c"]
