--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,6 +32,6 @@
         "APP_ROOT": "app",
         "AppSecret": "${localEnv:AppSecret}"
     },
-    // "postCreateCommand": "pwsh -c './pysetup.ps1 -Venv'",
-    "postCreateCommand": "sh -c '$(wget -O- https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)'",
+    // Setup Python virtual environemnt and install ohmyzsh.
+    "postCreateCommand": "zsh ./pysetup.sh venv && sh -c '$(wget -O- https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)' && sh -c ",
 }
