--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,7 @@
         "ms-azuretools.vscode-azurefunctions",
         "ms-azuretools.vscode-docker",
         "ms-python.python",
-        "ms-pyright.pyright",
+        "ms-python.vscode-pylance",
         "ms-vscode.powershell",
         "ms-python.anaconda-extension-pack",
         "redhat.vscode-yaml",
