--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,9 +8,10 @@
         "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
     ],
     // Set *default* container specific settings.json values on container create.
+    // Set *default* container specific settings.json values on container create.
     "settings": {
         "terminal.integrated.shell.linux": "/bin/bash",
-        "workbench.colorTheme": "dark-plus-syntax",
+        "workbench.colorTheme": "Default Dark+",
         "python.pythonPath": "/usr/local/bin/python",
         "python.linting.enabled": true,
         "python.linting.pylintEnabled": true,
@@ -29,21 +30,22 @@
         "ms-azuretools.vscode-azurefunctions",
         "ms-azuretools.vscode-docker",
         "ms-python.python",
-        "ms-pyright.pyright",
+        "ms-toolsai.jupyter",
+        "ms-python.vscode-pylance",
         "ms-vscode.powershell",
         "ms-python.anaconda-extension-pack",
         "redhat.vscode-yaml",
         "visualstudioexptteam.vscodeintellicode",
         "shardulm94.trailing-spaces",
         "eamodio.gitlens",
+        "mhutchie.git-graph",
         "tyriar.shell-launcher",
-        "dunstontc.dark-plus-syntax",
         "foxundermoon.shell-format",
         "aaron-bond.better-comments",
         "kevinrose.vsc-python-indent",
         "mechatroner.rainbow-csv",
         "coenraads.bracket-pair-colorizer-2",
-        "littlefoxteam.vscode-python-test-adapter"
+        "hbenl.vscode-test-explorer"
     ],
     "remoteEnv": {
         "APP_ROOT": "app",
@@ -51,5 +53,5 @@
         "CONNSTR_DB": "${localEnv:CONNSTR_DB}"
     },
     // Install project requirements and update all packages.
-    "postCreateCommand": "bash ./pysetup.sh upgrade",
+    "postCreateCommand": "bash ./pysetup.sh reqs",
 }
