--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,6 @@
         "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
     ],
     // Set *default* container specific settings.json values on container create.
-    // Set *default* container specific settings.json values on container create.
     "settings": {
         "terminal.integrated.shell.linux": "/bin/bash",
         "workbench.colorTheme": "Default Dark+",
@@ -49,8 +48,11 @@
     ],
     "remoteEnv": {
         "APP_ROOT": "app",
-        "AppSecret": "${localEnv:AppSecret}",
-        "CONNSTR_DB": "${localEnv:CONNSTR_DB}"
+        "APPCF_ENDPOINT": "${localEnv:APPCF_ENDPOINT}",
+        "AZURE_CLIENT_ID": "${localEnv:AZURE_CLIENT_ID}",
+        "AZURE_CLIENT_SECRET": "${localEnv:AZURE_CLIENT_SECRET}",
+        "AZURE_TENANT_ID": "${localEnv:AZURE_TENANT_ID}",
+        "ENV_STATE": "Development"
     },
     // Install project requirements and update all packages.
     "postCreateCommand": "bash ./pysetup.sh reqs",
