--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Temporary files
+\!*.*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -136,3 +139,16 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+#  Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# .tfvars files
+*.tfvars
+
+# .tfplan files
+*.tfplan
