--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,61 +1,61 @@
 {
-    "name": "Azure Functions & Python",
-    "dockerFile": "Dockerfile",
-    "forwardPorts": [
-        7071
-    ],
-    "mounts": [
-        "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
-    ],
-    // Set *default* container specific settings.json values on container create.
-    "settings": {
-        "terminal.integrated.shell.linux": "/bin/bash",
-        "workbench.colorTheme": "Default Dark+",
-        "python.pythonPath": "/usr/local/bin/python",
-        "python.linting.enabled": true,
-        "python.linting.pylintEnabled": true,
-        "python.formatting.autopep8Path": "/usr/local/py-utils/bin/autopep8",
-        "python.formatting.blackPath": "/usr/local/py-utils/bin/black",
-        "python.formatting.yapfPath": "/usr/local/py-utils/bin/yapf",
-        "python.linting.banditPath": "/usr/local/py-utils/bin/bandit",
-        "python.linting.flake8Path": "/usr/local/py-utils/bin/flake8",
-        "python.linting.mypyPath": "/usr/local/py-utils/bin/mypy",
-        "python.linting.pycodestylePath": "/usr/local/py-utils/bin/pycodestyle",
-        "python.linting.pydocstylePath": "/usr/local/py-utils/bin/pydocstyle",
-        "python.linting.pylintPath": "/usr/local/py-utils/bin/pylint"
-    },
-    // Add the IDs of extensions you want installed when the container is created.
-    "extensions": [
-        "ms-azuretools.vscode-azurefunctions",
-        "ms-azuretools.vscode-docker",
-        "ms-python.python",
-        "ms-toolsai.jupyter",
-        "ms-python.vscode-pylance",
-        "ms-vscode.powershell",
-        "ms-python.anaconda-extension-pack",
-        "redhat.vscode-yaml",
-        "visualstudioexptteam.vscodeintellicode",
-        "shardulm94.trailing-spaces",
-        "eamodio.gitlens",
-        "mhutchie.git-graph",
-        "tyriar.shell-launcher",
-        "foxundermoon.shell-format",
-        "aaron-bond.better-comments",
-        "kevinrose.vsc-python-indent",
-        "mechatroner.rainbow-csv",
-        "coenraads.bracket-pair-colorizer-2",
-        "hbenl.vscode-test-explorer"
-    ],
-    "remoteEnv": {
-        "APP_ROOT": "app",
-        "APPCF_ENDPOINT": "${localEnv:APPCF_ENDPOINT}",
-        "AZURE_CLIENT_ID": "${localEnv:AZURE_CLIENT_ID}",
-        "AZURE_CLIENT_SECRET": "${localEnv:AZURE_CLIENT_SECRET}",
-        "AZURE_TENANT_ID": "${localEnv:AZURE_TENANT_ID}",
-        "ENV_STATE": "Development",
-        "IMG_TAG": "v210101.1",
-        "PYTHONPATH": "./app"
-    },
-    // Install project requirements and update all packages.
-    "postCreateCommand": "bash pysetup.sh reqs"
+  "name": "Azure Functions & Python",
+  "dockerFile": "Dockerfile",
+  "forwardPorts": [
+    7071
+  ],
+  "mounts": [
+    "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
+  ],
+  // Set *default* container specific settings.json values on container create.
+  "settings": {
+    "terminal.integrated.shell.linux": "/bin/bash",
+    "workbench.colorTheme": "Default Dark+",
+    "python.pythonPath": "/usr/local/bin/python",
+    "python.linting.enabled": true,
+    "python.linting.pylintEnabled": true,
+    "python.formatting.autopep8Path": "/usr/local/py-utils/bin/autopep8",
+    "python.formatting.blackPath": "/usr/local/py-utils/bin/black",
+    "python.formatting.yapfPath": "/usr/local/py-utils/bin/yapf",
+    "python.linting.banditPath": "/usr/local/py-utils/bin/bandit",
+    "python.linting.flake8Path": "/usr/local/py-utils/bin/flake8",
+    "python.linting.mypyPath": "/usr/local/py-utils/bin/mypy",
+    "python.linting.pycodestylePath": "/usr/local/py-utils/bin/pycodestyle",
+    "python.linting.pydocstylePath": "/usr/local/py-utils/bin/pydocstyle",
+    "python.linting.pylintPath": "/usr/local/py-utils/bin/pylint"
+  },
+  // Add the IDs of extensions you want installed when the container is created.
+  "extensions": [
+    "aaron-bond.better-comments",
+    "coenraads.bracket-pair-colorizer-2",
+    "eamodio.gitlens",
+    "foxundermoon.shell-format",
+    "hbenl.vscode-test-explorer",
+    "kevinrose.vsc-python-indent",
+    "mechatroner.rainbow-csv",
+    "mhutchie.git-graph",
+    "ms-azuretools.vscode-azurefunctions",
+    "ms-azuretools.vscode-docker",
+    "ms-python.anaconda-extension-pack",
+    "ms-python.python",
+    "ms-python.vscode-pylance",
+    "ms-toolsai.jupyter",
+    "ms-vscode.powershell",
+    "redhat.vscode-yaml",
+    "shardulm94.trailing-spaces",
+    "tyriar.shell-launcher",
+    "visualstudioexptteam.vscodeintellicode"
+  ],
+  "remoteEnv": {
+    "APP_ROOT": "app",
+    "APPCF_ENDPOINT": "${localEnv:APPCF_ENDPOINT}",
+    "AZURE_CLIENT_ID": "${localEnv:AZURE_CLIENT_ID}",
+    "AZURE_CLIENT_SECRET": "${localEnv:AZURE_CLIENT_SECRET}",
+    "AZURE_TENANT_ID": "${localEnv:AZURE_TENANT_ID}",
+    "ENV_STATE": "Development",
+    "IMG_TAG": "v210101.1",
+    "PYTHONPATH": "./app"
+  },
+  // Install project requirements and update all packages.
+  "postCreateCommand": "bash pysetup.sh reqs"
 }
