--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,16 +1,16 @@
-azure-appconfiguration
-azure-common
-azure-core
-azure-functions
-azure-identity
-azure-keyvault-secrets
-azure-storage-blob
-azure-storage-file-datalake
-msal
-numpy
-numpyencoder
-pandas
-pyodbc
-ratelimit
-retrying
-SQLAlchemy
+azure-appconfiguration==1.3.0
+azure-common==1.1.28
+azure-core==1.22.0
+azure-functions==1.8.0
+azure-identity==1.7.1
+azure-keyvault-secrets==4.3.0
+azure-storage-blob==12.9.0
+azure-storage-file-datalake==12.5.0
+msal==1.16.0
+numpy==1.22.2
+numpyencoder==0.3.0
+pandas==1.4.0
+pyodbc==4.0.32
+ratelimit==2.2.1
+retrying==1.3.3
+SQLAlchemy==1.4.31
