--- a/conda.yaml
+++ b/conda.yaml
@@ -1,32 +1,31 @@
 name: az_functions
 channels:
-  - defaults
+  - conda-forge
 dependencies:
   - python=3.8.12
   - pip
+  # Dev
+  - black
+  - flake8
+  - ipykernel
+  - mypy
+  - notebook
+  - pydocstyle
+  - pylint
+  # App
+  - azure-common==1.1.28
+  - azure-core==1.22.1
+  - azure-identity==1.7.1
+  - azure-keyvault-secrets==4.3.0
+  - azure-storage-blob==12.9.0
+  - azure-storage-file-datalake==12.5.0
+  - msal==1.16.0
+  - numpy==1.22.2
+  - pandas==1.4.0
+  - ratelimit==2.2.1
+  - retrying==1.3.3
+  - SQLAlchemy==1.4.31
   - pip:
-      # Azure Functions
       - azure-appconfiguration==1.3.0
-      - azure-common==1.1.28
-      - azure-core==1.22.0
       - azure-functions==1.8.0
-      - azure-identity==1.7.1
-      - azure-keyvault-secrets==4.3.0
-      - azure-storage-blob==12.9.0
-      - azure-storage-file-datalake==12.5.0
-      - msal==1.16.0
-      - numpy==1.22.2
       - numpyencoder==0.3.0
-      - pandas==1.4.0
-      - ratelimit==2.2.1
-      - retrying==1.3.3
-      - SQLAlchemy==1.4.31
-      # Dev
-      - black
-      - flake8
-      - ipykernel
-      - mypy
-      - notebook
-      - pandas
-      - pydocstyle
-      - pylint
