--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,35 +1,27 @@
 {
   "azureFunctions.deploySubpath": "app",
-  "azureFunctions.scmDoBuildDuringDeployment": true,
-  "python.envFile": "${workspaceFolder}/.vscode/env",
-  "terminal.integrated.env.windows": {
-    "PYTHONPATH": "./app"
-  },
   "azureFunctions.projectLanguage": "Python",
   "azureFunctions.projectRuntime": "~3",
+  "azureFunctions.scmDoBuildDuringDeployment": true,
   "debug.internalConsoleOptions": "neverOpen",
-  "python.formatting.provider": "black",
-  "python.linting.enabled": true,
-  "python.linting.pylintEnabled": true,
-  "python.linting.pylintArgs": [
-    "--load-plugins",
-    "pylint_sqlalchemy"
-  ],
-  "python.linting.flake8Enabled": true,
-  "python.linting.flake8Args": [
-    "--max-line-length=88",
-    "--ignore=E203,W503",
-    "--select=B,C,E,F,W,T4,B9",
-    "--max-complexity=50"
-  ],
-  "python.linting.mypyEnabled": true,
-  "python.linting.pydocstyleEnabled": true,
-  "python.testing.nosetestsEnabled": false,
-  "python.testing.unittestEnabled": false,
-  "python.testing.pytestEnabled": true,
-  "python.testing.pytestArgs": [
-    "test"
-  ],
+  "editor.semanticTokenColorCustomizations": {
+    "[Default Dark+]": {
+      "enabled": true,
+      "rules": {
+        "*.declaration": {
+          "bold": true
+        },
+        "comment": "#666666",
+        "module:python": {
+          "underline": true
+        },
+        "operator": "#C586C0",
+        "parameter": "#D4D4D4",
+        "property": "#D4D4D4",
+        "selfParameter:python": "#569CD6"
+      }
+    }
+  },
   "editor.tokenColorCustomizations": {
     "[Default Dark+]": {
       "textMateRules": [
@@ -38,7 +30,6 @@
             "comment.line"
           ],
           "settings": {
-            "fontStyle": "italic",
             "foreground": "#666666"
           }
         },
@@ -79,22 +70,34 @@
       ]
     }
   },
-  "editor.semanticTokenColorCustomizations": {
-    "[Default Dark+]": {
-      "enabled": true,
-      "rules": {
-        "property": "#9CDCFE",
-        "comment": "#666666",
-        "parameter": "#D4D4D4",
-        "operator": "#C586C0",
-        "*.declaration": {
-          "bold": true
-        },
-        "module:python": {
-          "underline": true
-        },
-        "selfParameter:python": "#569CD6"
-      }
-    }
+  "files.defaultLanguage": "python",
+  "python.envFile": "${workspaceFolder}/.vscode/env",
+  "python.formatting.provider": "black",
+  "python.languageServer": "Pylance",
+  "python.linting.enabled": true,
+  "python.linting.flake8Args": [
+    "--max-line-length=88",
+    "--ignore=E203,W503",
+    "--select=B,C,E,F,W,T4,B9",
+    "--max-complexity=50"
+  ],
+  "python.linting.flake8Enabled": true,
+  "python.linting.mypyEnabled": true,
+  "python.linting.pydocstyleArgs": [
+    "--ignore=D203,D205,D212,D413"
+  ],
+  "python.linting.pydocstyleEnabled": true,
+  "python.linting.pylintArgs": [
+    "--load-plugins",
+    "pylint_sqlalchemy"
+  ],
+  "python.linting.pylintEnabled": true,
+  "python.testing.pytestArgs": [
+    "test"
+  ],
+  "python.testing.pytestEnabled": true,
+  "python.testing.unittestEnabled": false,
+  "terminal.integrated.env.windows": {
+    "PYTHONPATH": "./app"
   }
 }
