--- a/conda.yaml
+++ b/conda.yaml
@@ -2,7 +2,7 @@ name: az_functions
 channels:
   - conda-forge
 dependencies:
-  - python=3.8.12
+  - python=3.9
   - pip
   # Dev
   - black
@@ -22,6 +22,7 @@ dependencies:
   - msal==1.16.0
   - numpy==1.22.2
   - pandas==1.4.0
+  - pyodbc==4.0.32
   - ratelimit==2.2.1
   - retrying==1.3.3
   - SQLAlchemy==1.4.31
@@ -29,3 +30,4 @@ dependencies:
       - azure-appconfiguration==1.3.0
       - azure-functions==1.8.0
       - numpyencoder==0.3.0
+      - pylint-sqlalchemy==0.2.0
