--- a/conda.yaml
+++ b/conda.yaml
@@ -13,19 +13,19 @@ dependencies:
   - pydocstyle
   - pylint
   # App
-  - azure-common==1.1.28
-  - azure-core==1.22.1
-  - azure-identity==1.7.1
-  - azure-keyvault-secrets==4.3.0
-  - azure-storage-blob==12.9.0
-  - azure-storage-file-datalake==12.5.0
-  - msal==1.16.0
-  - numpy==1.22.2
-  - pandas==1.4.0
-  - pyodbc==4.0.32
-  - ratelimit==2.2.1
-  - retrying==1.3.3
-  - SQLAlchemy==1.4.31
+  - azure-common=1.1.28
+  - azure-core=1.22.1
+  - azure-identity=1.7.1
+  - azure-keyvault-secrets=4.3.0
+  - azure-storage-blob=12.9.0
+  - azure-storage-file-datalake=12.5.0
+  - msal=1.16.0
+  - numpy=1.22.2
+  - pandas=1.4.0
+  - pyodbc=4.0.32
+  - ratelimit=2.2.1
+  - retrying=1.3.3
+  - SQLAlchemy=1.4.31
   - pip:
       - azure-appconfiguration==1.3.0
       - azure-functions==1.8.0
