--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
       "label": "func: host start",
       "type": "func",
       "command": "host start",
-      "problemMatcher": "$func-watch",
+      "problemMatcher": "$func-python-watch",
       "isBackground": true,
       "options": {
         "cwd": "${workspaceFolder}/app"
