--- a/conda.yaml
+++ b/conda.yaml
@@ -1,33 +1,33 @@
 name: az_functions
 channels:
-  - conda-forge
+  - pkgs/main
 dependencies:
-  - python=3.9
+  - python=3.10
   - pip
-  # Dev
-  - black
-  - flake8
-  - ipykernel
-  - mypy
-  - notebook
-  - pydocstyle
-  - pylint
-  # App
-  - azure-common=1.1.28
-  - azure-core=1.22.1
-  - azure-identity=1.7.1
-  - azure-keyvault-secrets=4.3.0
-  - azure-storage-blob=12.9.0
-  - azure-storage-file-datalake=12.5.0
-  - msal=1.16.0
-  - numpy=1.22.2
-  - pandas=1.4.0
-  - pyodbc=4.0.32
-  - ratelimit=2.2.1
-  - retrying=1.3.3
-  - SQLAlchemy=1.4.31
   - pip:
-      - azure-appconfiguration==1.3.0
-      - azure-functions==1.8.0
+      # Dev
+      - black
+      - flake8
+      - ipykernel
+      - mypy
+      - notebook
+      - pydocstyle
+      - pylint
+      # App
+      - azure-appconfiguration==1.4.0
+      - azure-common==1.1.28
+      - azure-core==1.27.0
+      - azure-functions==1.14.0
+      - azure-identity==1.13.0
+      - azure-keyvault-secrets==4.7.0
+      - azure-storage-blob==12.16.0
+      - azure-storage-file-datalake==12.11.0
+      - msal==1.22.0
+      - numpy==1.24.3
       - numpyencoder==0.3.0
+      - pandas==2.0.2
+      - pyodbc==4.0.39
       - pylint-sqlalchemy==0.2.0
+      - ratelimit==2.2.1
+      - retrying==1.3.4
+      - SQLAlchemy==2.0.15
