--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,92 +1,57 @@
 {
+  "[json]": {
+    "editor.codeActionsOnSave": {
+      "source.sort.json": true
+    },
+    "editor.defaultFormatter": "vscode.json-language-features",
+    "editor.tabSize": 2
+  },
+  "[jsonc]": {
+    "editor.codeActionsOnSave": {
+      "source.sort.json": true
+    },
+    "editor.defaultFormatter": "vscode.json-language-features",
+    "editor.tabSize": 2
+  },
+  "[markdown]": {
+    "editor.defaultFormatter": "DavidAnson.vscode-markdownlint",
+    "editor.rulers": [
+      120
+    ],
+    "files.trimTrailingWhitespace": false
+  },
+  "[powershell]": {
+    "editor.defaultFormatter": "ms-vscode.powershell",
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.formatOnSaveMode": "file",
+    "editor.rulers": [
+      115
+    ],
+    "editor.semanticHighlighting.enabled": true,
+    "editor.tabSize": 4
+  },
+  "[python]": {
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true
+    },
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.formatOnSaveMode": "file",
+    "editor.formatOnType": true,
+    "editor.rulers": [
+      79,
+      88
+    ],
+    "editor.tabSize": 4
+  },
   "azureFunctions.deploySubpath": "app",
   "azureFunctions.projectLanguage": "Python",
   "azureFunctions.projectRuntime": "~3",
   "azureFunctions.scmDoBuildDuringDeployment": true,
-  "black-formatter.args": [
-    "--line-length=100"
-  ],
   "debug.internalConsoleOptions": "neverOpen",
-  "editor.semanticTokenColorCustomizations": {
-    "[Default Dark Modern]": {
-      "rules": {
-        "*.declaration": {
-          "bold": true
-        },
-        "comment": "#666666",
-        "module:python": {
-          "underline": true
-        },
-        "parameter:powershell": "#569cd6",
-        "property:powershell": "#d4d4d4",
-        "property:python": "#d4d4d4",
-        "selfParameter:python": "#569cd6"
-      }
-    }
-  },
-  "editor.tokenColorCustomizations": {
-    "[Default Dark Modern]": {
-      "textMateRules": [
-        {
-          "scope": [
-            "comment.line"
-          ],
-          "settings": {
-            "foreground": "#666666"
-          }
-        },
-        {
-          "scope": [
-            "string.quoted.docstring.multi"
-          ],
-          "settings": {
-            "foreground": "#608b4e"
-          }
-        },
-        {
-          "scope": [
-            "variable.parameter.function-call.python"
-          ],
-          "settings": {
-            "foreground": "#d4d4d4"
-          }
-        },
-        {
-          "scope": [
-            "meta.function-call.python",
-            "meta.member.access.python"
-          ],
-          "settings": {
-            "foreground": "#dcdcaa"
-          }
-        }
-      ]
-    }
-  },
-  "files.defaultLanguage": "python",
   "python.envFile": "${workspaceFolder}/.vscode/env",
-  "python.formatting.blackArgs": [
-    "--line-length=100"
-  ],
-  "python.languageServer": "Pylance",
-  "python.linting.enabled": true,
-  "python.linting.flake8Args": [
-    "--max-line-length=100",
-    "--ignore=E203,W503",
-    "--select=B,C,E,F,W,T4,B9",
-    "--max-complexity=50"
-  ],
-  "python.linting.flake8Enabled": true,
-  "python.linting.mypyEnabled": false,
-  "python.linting.pydocstyleArgs": [
-    "--ignore=D203,D205,D212,D413"
-  ],
-  "python.linting.pydocstyleEnabled": true,
-  "python.linting.pylintArgs": [
-    "--load-plugins",
-    "pylint_sqlalchemy"
-  ],
-  "python.linting.pylintEnabled": true,
   "python.testing.pytestArgs": [
     "test"
   ],
